fix: router atualizar status chave
