# docs/swagger.json
@@ -9,51 +9,6 @@
     "host": "api-licenca.intelbras-cve-pro.com.br",
     "basePath": "/",
     "paths": {
-        "/atualizar-chave": {
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Atualiza o status de uma chave de acesso existente.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Chaves de Acesso"
-                ],
-                "summary": "Atualizar status da chave de acesso",
-                "parameters": [
-                    {
-                        "description": "Dados da chave de acesso",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.AtualizarChaveRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Status atualizado com sucesso"
-                    },
-                    "400": {
-                        "description": "Erro nos dados enviados"
-                    },
-                    "404": {
-                        "description": "Chave não encontrada"
-                    },
-                    "500": {
-                        "description": "Erro interno ao atualizar status da chave de acesso"
-                    }
-                }
-            }
-        },
         "/atualizar-licenca": {
             "put": {
                 "security": [
@@ -127,6 +82,51 @@
                                 "type": "string"
                             }
                         }
+                    }
+                }
+            }
+        },
+        "/atualizar-status-chave": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Atualiza o status de uma chave de acesso existente.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chaves de Acesso"
+                ],
+                "summary": "Atualizar status da chave de acesso",
+                "parameters": [
+                    {
+                        "description": "Dados da chave de acesso",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AtualizarChaveRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Status atualizado com sucesso"
+                    },
+                    "400": {
+                        "description": "Erro nos dados enviados"
+                    },
+                    "404": {
+                        "description": "Chave não encontrada"
+                    },
+                    "500": {
+                        "description": "Erro interno ao atualizar status da chave de acesso"
                     }
                 }
             }
